Completed all the furthers

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,15 @@
     transform: rotate(360deg);
   }
 }
+
+#message {
+  height: 30px;
+}
+
+.done {
+  color: rgb(169, 168, 168);
+}
+
+.error {
+  color: red;
+}
